--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "jest": "^29.4.2",
     "prisma": "^4.9.0",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
